# geldparser

./: Cargo.toml  ledger.org
examples/: csv.rs  event-read.rs  hello.rs
src/: accounts.rs  csv_orders.rs  files.rs  lib.rs  main.rs  odf_transactions.rs
tests/: demo.mt940  integration_test.rs
