[package]
name = "geldparser"
version = "0.1.0"
authors = ["andreaskundig <andreas.kuendig@gmx.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mt940 = "0.3.2"
regex = "1.3.3"
lazy_static = "1.4.0"
chrono = "0.4.11"
text_io = "0.1.8"
crossterm = "0.17.0"
rust_decimal = "1.0.1"
derive_more = "0.99.5"
csv = "1"
failure = "0.1"
anyhow = "1.0"
itertools = "0.9.0"
calamine = "0.16.1"